--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
 </head>
 <body>
-    <h1>Isso é um título</h1>
-    <p>Isso é uma parágrafo</p>
-    <img src="html.png" alt="Logo do HTML5">
+    <header></header>
+    <main>
+        <h1>Eleve seu negócio digital a outro nível
+        <strong>com um Front-end de qualidade!</strong></h1>
+        <p>Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <a href="https://www.instagram.com/lessyn/">Instagram</a>
+        <a href="https://github.com/Lessyn">GitHub</a>
+        <img src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
+    </main>
+    <footer></footer>
 </body>
 </html>
