--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,8 +9,8 @@
 <body>
     <header></header>
     <main>
-        <h1>Eleve seu negócio digital a outro nível
-        <strong>com um Front-end de qualidade!</strong></h1>
+        <h1 class="titulo">Eleve seu negócio digital a outro nível
+        <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://www.instagram.com/lessyn/">Instagram</a>
         <a href="https://github.com/Lessyn">GitHub</a>
