--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header></header>
-    <main>
+    <main class="apresentacao">
         <h1 class="titulo">Eleve seu negócio digital a outro nível
         <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://www.instagram.com/lessyn/">Instagram</a>
         <a href="https://github.com/Lessyn">GitHub</a>
-        <img src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
+        <img class="titulo-foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
     <footer></footer>
 </body>
