--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
     <main class="apresentacao">
-        <h1 class="titulo">Eleve seu negócio digital a outro nível
-        <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://www.instagram.com/lessyn/">Instagram</a>
-        <a href="https://github.com/Lessyn">GitHub</a>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível
+                <strong class="apresentacao__conteudo__titulo__destaque">com um Front-end de qualidade!</strong>
+            </h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos
+                negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <a href="https://www.instagram.com/lessyn/">Instagram</a>
+            <a href="https://github.com/Lessyn">GitHub</a>
+        </section>
         <img class="titulo-foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
     <footer></footer>
 </body>
+
 </html>
