--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,10 +15,13 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível
                 <strong class="apresentacao__conteudo__titulo__destaque">com um Front-end de qualidade!</strong>
             </h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos
+            <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade
+                em Angular, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-            <a href="https://www.instagram.com/lessyn/">Instagram</a>
-            <a href="https://github.com/Lessyn">GitHub</a>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">Linkedin</a>
+                <a class="apresentacao__links__link" href="https://github.com/Lessyn">GitHub</a>
+            </div>
         </section>
         <img class="titulo-foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
