Adicionando box-shadow à foto.
Foram adicionados 2 box-shadow a foto. Um na cor preta e outra na cor verde.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,7 +23,7 @@
                 <a class="apresentacao__links__link" href="https://github.com/Lessyn">GitHub</a>
             </div>
         </section>
-        <img class="titulo-foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
+        <img class="apresentacao__foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
     <footer></footer>
 </body>
