--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,7 @@
                 em Angular, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">Linkedin</a>
                 <a class="apresentacao__links__link" href="https://github.com/Lessyn">GitHub</a>
             </div>
