--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,14 +19,17 @@
                 em Angular, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/Lessyn">GitHub</a>
+                <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>                
+                <a  class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">
+                    <img src="assets/Logo linkedin.png" alt="imagem linkedin">
+                    Linkedin</a>
+                <a class="apresentacao__links__link" href="https://github.com/Lessyn">
+                    <img src="assets/Logo Github.png" alt="imagem github">
+                    GitHub</a>
             </div>
         </section>
-        <img class="apresentacao__foto" src="foto perfil.jpg" alt="foto do Rodrigo Lessyn">
+        <img class="apresentacao__foto" src="/assets/foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
     <footer></footer>
 </body>
-
 </html>
