Criando header e footer
Nessa aula, você aprendeu como:
Criar e fazer a estilização do footer da página;
Criar o header da página;
Aplicar os links de navegação através da tag <nav>.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível
@@ -30,6 +35,6 @@
         </section>
         <img class="apresentacao__foto" src="/assets/foto perfil.jpg" alt="foto do Rodrigo Lessyn">
     </main>
-    <footer></footer>
+    <footer class="rodape">Desenvolvido por Rodrigo.</footer>
 </body>
 </html>
