04. Navegando entre paginas.
Nessa aula, você aprendeu como:
Fazer a estilização do header do portfólio;
Criar a nova página HTML “Sobre mim”;
Desenvolver a navegação entre as páginas “Home” e “Sobre mim”.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="">Home</a>
-            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -22,10 +22,10 @@
             </h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Lessyn, desenvolvedor Front-end com especialidade
                 em Angular, HTML e CSS. Ajudo pequenos
-                negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                negócios e designers a colocarem em práticas boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>                
-                <a  class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">
+                <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-lessyn/">
                     <img src="assets/Logo linkedin.png" alt="imagem linkedin">
                     Linkedin</a>
                 <a class="apresentacao__links__link" href="https://github.com/Lessyn">
@@ -37,4 +37,5 @@
     </main>
     <footer class="rodape">Desenvolvido por Rodrigo.</footer>
 </body>
+
 </html>
