--- a/Praticando-HTML-CSS/index.html
+++ b/Praticando-HTML-CSS/index.html
@@ -14,18 +14,46 @@
 <body>
     <header>
         <section class="container principal">
-            <div>
+            <div class="container__caixa">
                 <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                     único.</h1>
-                <img src="images/Combo.png" alt="Imagem da palavra combo">
+                <img src="images/Combo.png" alt="Imagem da palavra combo" class="container__imagem">
                 <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
                 <a href="www.alura.com.br" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
                 <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
             </div>
         </section>
+
+        <section class="container secundario">
+            <img class="secundario__imagem" src="images/Pixel True Mockup 1.png"
+                alt="Um monitor e um celular com o alura plus aberto">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo"> Assita do seu jeito</h2>
+                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
+                    outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            </div>
+        </section>
+
+        <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a
+                    cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+            </div>
+            <img src="images/Telas.png" alt="Tela da alura plus e do alura lingua" class="secundario__imagem">
+
+        </section>
+
+        <section class="container secundario">
+            <img src="images/Notebook.png" alt="Imagem da plataforma do curso da alura na tela do notebook"
+                class="secundario__imagem">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Baixe seus cursos</h2>
+                <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                    você, até mesmo sem internet.</p>
+            </div>
+        </section>
     </header>
-    <main></main>
-    <footer></footer>
 
 </body>
 
